--- a/css/css_codes.css
+++ b/css/css_codes.css
@@ -11,8 +11,8 @@ input[type=text],[type=email], select, textarea {
 }
 
 .menu {
-    
-    margin: 50px auto 100px;
+    margin-top:0;
+    margin: 50px ;
     background-color: #fff;
     padding: 20px 20px 20px;
     text-align: center;
